refactored and optimized code, fixed bugs

--- a/src/Components/ConfigContext/config.json
+++ b/src/Components/ConfigContext/config.json
@@ -3,6 +3,6 @@
   "showTileScore": true,
   "easyModeEnabled": false,
   "proControlsOn": false,
-  "blankTilesOn": false,
+  "blankTilesOn": true,
   "handSize": 7
 }
