major refactor, much cleaner code and added an info section

--- a/src/Components/ConfigContext/config.json
+++ b/src/Components/ConfigContext/config.json
@@ -1,8 +1,9 @@
 {
   "wordlist": "wordfind",
   "showTileScore": true,
-  "easyModeEnabled": false,
   "proControlsOn": false,
   "blankTilesOn": true,
+  "hardModeOn": false,
+  "maxTries": 5,
   "handSize": 7
 }
