refactor, added hardmode and limited retries option

--- a/src/Components/ConfigContext/config.json
+++ b/src/Components/ConfigContext/config.json
@@ -1,9 +1,10 @@
 {
   "wordlist": "wordfind",
   "showTileScore": true,
-  "proControlsOn": false,
   "blankTilesOn": true,
   "hardModeOn": false,
+  "evenDistributionOn": false,
   "maxTries": 5,
+  "infiniteTriesOn": false,
   "handSize": 7
 }
