--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -7,8 +7,9 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    concurrency: ci-${{ github.ref }}
 
     strategy:
       matrix:
@@ -22,7 +23,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Build
+    - name: Install dependencies
       run: |
-        npm install
-        npx webpack
+        yarn install
+        yarn run build
+
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@v4
+      with:
+        folder: build # The folder the action should deploy.
