--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -1,34 +1,39 @@
-name: NodeJS with Webpack
+name: Deploy to GitHub Pages
 
-on:
+on: 
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: [ deploy-to-gh-pages ]
 
+permissions:
+  contents: read  
+  pages: write      
+  id-token: write   
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    concurrency: ci-${{ github.ref }}
-
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 22.x]
-
     steps:
-    - uses: actions/checkout@v4
-
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: Install dependencies
-      run: |
-        yarn install
-        yarn run build
-
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@v4
-      with:
-        folder: build # The folder the action should deploy.
+      - name: Checkout Source  
+        uses: actions/checkout@v4
+        
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+            node-version: 20
+            
+      - name: Install Dependencies
+        run: yarn install
+        
+      - name: Build Project
+        run: yarn run build     
+        
+      - name: Upload artifacts
+        uses: actions/upload-pages-artifact@v3   
+        with:
+           name: 'github-pages'
+           path: build
+           
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
+        with: 
+          token: ${{ secrets.GITHUB_TOKEN }}
+          artifact_name: 'github-pages'
